--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h1>Login</h1>
-        <input type="text" id="login"
+        <input type="text" id="login" placeholder="Nome">
     </div>
 </body>
 </html>
